--- a/Mall_Customers_csv.ipynb
+++ b/Mall_Customers_csv.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHrK5JMClDIScjPc/dKYA6",
+      "authorship_tag": "ABX9TyPp4NVCaWWM27F5qigEJHmI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1414,6 +1414,36 @@
       "metadata": {
         "id": "xhGQjFi70f4R"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Cluster counts:\\n\", df['Cluster'].value_counts())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e2JbPwCw2QG5",
+        "outputId": "06ae45a9-2ffc-46e4-d069-d19cda7002fb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cluster counts:\n",
+            " Cluster\n",
+            "0    81\n",
+            "1    39\n",
+            "3    35\n",
+            "4    23\n",
+            "2    22\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     }
   ]
 }
