--- a/Mall_Customers_csv.ipynb
+++ b/Mall_Customers_csv.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPp4NVCaWWM27F5qigEJHmI",
+      "authorship_tag": "ABX9TyMcos0outvYbWNF2t72Exw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1396,27 +1396,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "e1BW5xMgy7o9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Conclusion\n",
-        "Using K-Means clustering, customers were grouped into five segments based on income and spending behavior.\n",
-        "This helps identify premium shoppers, cautious spenders, and budget-conscious groups,\n",
-        "enabling targeted marketing strategies for each segment.\n"
-      ],
-      "metadata": {
-        "id": "xhGQjFi70f4R"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [
         "print(\"Cluster counts:\\n\", df['Cluster'].value_counts())\n"
       ],
@@ -1444,6 +1423,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 🏁 Final Conclusion & Findings\n",
+        "\n",
+        "Using **K-Means clustering**, customers were grouped into **five distinct segments** based on their **annual income** and **spending behavior**.  \n",
+        "The Elbow Method indicated that **K = 5** gives the optimal cluster separation.  \n",
+        "\n",
+        "The clusters represent:\n",
+        "- **Cluster 0:** Moderate-income, average-spending customers (majority group).  \n",
+        "- **Cluster 1:** Young, high-income, high-spending customers — *premium shoppers*.  \n",
+        "- **Cluster 2:** Young, low-income but high-spending customers — *trendy impulsive buyers*.  \n",
+        "- **Cluster 3:** Wealthy but low-spending customers — *potential targets for engagement*.  \n",
+        "- **Cluster 4:** Low-income, low-spending customers — *budget-conscious group*.  \n",
+        "\n",
+        "This segmentation helps businesses **design personalized marketing strategies**, allocate resources efficiently, and enhance customer satisfaction through better-targeted offers.\n"
+      ],
+      "metadata": {
+        "id": "Wdn02xgc21z_"
+      }
     }
   ]
 }
