--- a/Breast_Cancer_Classification.ipynb
+++ b/Breast_Cancer_Classification.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "WmNxpXB4OyDK"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -72,12 +72,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 328
         },
         "id": "spTw7SsmO1OY",
-        "outputId": "c5de8356-a56e-43f0-93ee-0a5b7252aaed"
+        "outputId": "152ccd5b-5546-44c9-b958-33eb30c4d635"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -87,9 +87,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0773f270-0ad3-40d2-b6f9-2cc62f46bd35\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-ca481db2-8808-46f8-83de-54bea0cb41e3\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-0773f270-0ad3-40d2-b6f9-2cc62f46bd35\">\n",
+              "     <output id=\"result-ca481db2-8808-46f8-83de-54bea0cb41e3\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -277,7 +277,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving archive (7).zip to archive (7).zip\n"
+            "Saving archive (7).zip to archive (7) (1).zip\n"
           ]
         },
         {
@@ -323,7 +323,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a65ae5db-85c4-491f-8a44-cc01996e35b0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3ac6a481-7b83-446e-b14b-b958d76bd159\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -493,7 +493,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a65ae5db-85c4-491f-8a44-cc01996e35b0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ac6a481-7b83-446e-b14b-b958d76bd159')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -545,12 +545,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a65ae5db-85c4-491f-8a44-cc01996e35b0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3ac6a481-7b83-446e-b14b-b958d76bd159 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a65ae5db-85c4-491f-8a44-cc01996e35b0');\n",
+              "        const element = document.querySelector('#df-3ac6a481-7b83-446e-b14b-b958d76bd159');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -570,8 +570,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-cd2c3a0e-ec34-493b-a508-11c3d3e0d127\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cd2c3a0e-ec34-493b-a508-11c3d3e0d127')\"\n",
+              "    <div id=\"df-501d54ec-8e2d-447c-b56b-c6453262d2d8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-501d54ec-8e2d-447c-b56b-c6453262d2d8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -690,7 +690,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-cd2c3a0e-ec34-493b-a508-11c3d3e0d127 button');\n",
+              "            document.querySelector('#df-501d54ec-8e2d-447c-b56b-c6453262d2d8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -706,7 +706,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 17
         }
       ]
     },
@@ -723,9 +723,9 @@
           "height": 1000
         },
         "id": "PvqLpAcZO_CL",
-        "outputId": "a3e9c21f-4dba-498a-d009-8be6ce60a4a5"
+        "outputId": "0759966d-ba93-432d-c634-39d8a56f77dd"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,7 +841,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0b8aa67a-4c9a-40a4-805f-8612186cd4bd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-045fede0-583f-4e49-88b0-56fb873a3b99\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1083,7 +1083,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0b8aa67a-4c9a-40a4-805f-8612186cd4bd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-045fede0-583f-4e49-88b0-56fb873a3b99')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1135,12 +1135,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0b8aa67a-4c9a-40a4-805f-8612186cd4bd button.colab-df-convert');\n",
+              "        document.querySelector('#df-045fede0-583f-4e49-88b0-56fb873a3b99 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0b8aa67a-4c9a-40a4-805f-8612186cd4bd');\n",
+              "        const element = document.querySelector('#df-045fede0-583f-4e49-88b0-56fb873a3b99');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1160,8 +1160,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-6a145960-d5f5-43bc-8d8a-b484cb6f04f8\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6a145960-d5f5-43bc-8d8a-b484cb6f04f8')\"\n",
+              "    <div id=\"df-5b2310e5-e598-4de5-9715-4e71d98ffa35\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b2310e5-e598-4de5-9715-4e71d98ffa35')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1280,7 +1280,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-6a145960-d5f5-43bc-8d8a-b484cb6f04f8 button');\n",
+              "            document.querySelector('#df-5b2310e5-e598-4de5-9715-4e71d98ffa35 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1295,7 +1295,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 18
         }
       ]
     },
@@ -1311,9 +1311,9 @@
           "height": 1000
         },
         "id": "toEqADFnPCo9",
-        "outputId": "6fb1f271-43e8-4836-fff6-1b3dee336377"
+        "outputId": "8bb17dc0-3166-48f8-d2b9-9061c5a9a4ca"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1515,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 19
         }
       ]
     },
@@ -1536,12 +1536,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 559
+          "height": 579
         },
         "id": "gp9qWiqOPF1d",
-        "outputId": "5c7e88d1-bb13-4ae4-f500-9034fda0e3f5"
+        "outputId": "e7cdf93e-cf3f-4d85-add8-d57fc78ea64a"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1580,7 +1580,7 @@
       "metadata": {
         "id": "4G6lgkarPI5p"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1593,7 +1593,7 @@
       "metadata": {
         "id": "NPB_lt1JPMOd"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1606,7 +1606,7 @@
       "metadata": {
         "id": "U1hXnJ_KPPLV"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1619,7 +1619,7 @@
       "metadata": {
         "id": "ajVNkaRzPRze"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1642,9 +1642,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qg4Vi2z1PU08",
-        "outputId": "96f3d1a9-ed92-4a67-94ef-acf92480ac73"
+        "outputId": "d0b0c9f9-bf4e-4247-9577-bf332358a2fe"
       },
-      "execution_count": 12,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1699,12 +1699,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 611
+          "height": 631
         },
         "id": "X1IW7PabPYdk",
-        "outputId": "60802673-eda3-4dd3-d3e9-7443f5665563"
+        "outputId": "673f66ab-5fbe-4065-c61b-28d91b241cbf"
       },
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,9 +1754,9 @@
           "height": 410
         },
         "id": "MxcpFy0iPcMZ",
-        "outputId": "a342d096-0272-4d0f-b277-1ddac7c39f5d"
+        "outputId": "744e5000-7db2-4bcf-d0f3-d08af7f4a8b4"
       },
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1783,9 +1783,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "13x7ymDgPfge",
-        "outputId": "a1465051-e038-41a1-cc3a-ad33f48401e0"
+        "outputId": "2e2deb99-1145-444f-f836-319ccaf34c74"
       },
-      "execution_count": 15,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
